--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-python-telegram-bot==21.0.1
-python-telegram-bot[job-queue]==21.0.1
+python-telegram-bot==21.9
 APScheduler==3.10.4
+aiohttp==3.10.11
